src/test/ui/resolve/resolve-hint-macro.stderr
error[E0423]: expected function, found macro `assert`
  --> $DIR/resolve-hint-macro.rs:12:5
   |
12 |     assert(true);
   |     ^^^^^^ did you intend to invoke a macro of the same name? `assert!`

error: aborting due to previous error

